--- a/src/client/App.less
+++ b/src/client/App.less
@@ -6,3 +6,31 @@ body {
   text-align: center;
   margin: auto;
 }
+
+.post-element {
+  border: solid;
+}
+
+.post-element > img {
+  width: 110px;
+  height: 150px;
+  left: 0;
+}
+
+.tag-list {
+  width: 300px;
+  height: 100px;
+  border: solid;
+  margin: auto;
+}
+
+.tag-list-title {
+  font-size: 1.5rem;
+  margin: 5px 0; 
+}
+
+.tag-list-elements {
+  display: inline-block;
+  margin: 0 10px;
+  font-size: 1rem;
+}
