create admin(delete...etc), modified scroll

--- a/src/client/App.less
+++ b/src/client/App.less
@@ -3,7 +3,7 @@ h1 {
 }
 
 body {
-  text-align: center;
+  // text-align: center;
   margin: auto;
 }
 
@@ -33,4 +33,23 @@ body {
   display: inline-block;
   margin: 0 10px;
   font-size: 1rem;
+}
+
+.menu-button {
+  display: block;
+  margin: 5px;
+  padding: 4px;
+  border: solid;
+  font-size: 1.5rem;
+}
+
+.admin-box {
+  margin: 5px;
+  padding: 4px;
+  border: solid;
+  font-size: 1.5rem;
+}
+
+.tag-box {
+  display: flex;
 }
