--- a/src/client/App.less
+++ b/src/client/App.less
@@ -1,55 +1,300 @@
-h1 {
-  color: pink;
+html, body {
+  box-sizing: border-box;
+  margin: auto;
 }
 
-body {
-  // text-align: center;
-  margin: auto;
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+.first-ui-theme{
+  background-color: rgb(19, 19, 22);
+  color: white;
+}
+
+.second-ui-theme {
+  background-color: rgb(255, 255, 255);
+  color: black;
+}
+.third-ui-theme {
+  background-color: rgb(255, 38, 38);
+  color: white;
+}
+
+.header-box {
+  position: fixed;
+  width: 100%;
+  height: 74px;
+  background-color: black;
+  border-bottom: solid;
+  border-width: 2px;
+  border-color: rgb(49, 49, 49);
+  overflow: hidden;
+}
+
+.main-logo {
+  display: inline-block;
+  height: 90px;
+  padding-left: 120px;
+  color: #f1efe6;
+  font-size: 3.5rem;
+  font-weight: 800;
+  overflow: hidden;
+  font-family: 'Nothing You Could Do', cursive;
+  background: url(https://www.thisiscolossal.com/wp-content/uploads/2014/03/140104.gif) no-repeat left -20px;
+  // background: url(https://www.thisiscolossal.com/wp-content/uploads/2018/04/agif2opt.gif) no-repeat left -20px;
+  background-size: 115px;
+  }
+
+.main-logo-text {
+  vertical-align: middle;
+  display: inline-block;
+  padding-bottom: 22px;
+}
+
+.main-logo > img {
+  width: 100px;
+  height: 70px;
+  margin-right: 10px;
+}
+
+.main-image {
+  text-align: center;
+  padding: 20px 0;
+  background-color: rgba(0, 0, 0, 0.863);
+}
+
+.main-image > img {
+  margin-top: 70px; 
+  width: 1000px;
+  height: 600px;
+}
+
+.articles-btn {
+  position: absolute;
+  width: 60px;
+  height: 25px;
+  top: 54%;
+  right: 7%;
+  margin: 0 5px;
+  padding: 0 2px;
+  color: white;
+  text-decoration:none;
+  font-size: 1.2rem;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+
+.admin-btn {
+  position: absolute;
+  width: 60px;
+  height: 25px;
+  top: 54%;
+  right: 1%;
+  margin: 0 5px;
+  padding: 0 2px;
+  color: white;
+  text-decoration:none;
+  font-size: 1.2rem;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
 .post-element {
-  border: solid;
+  border-width: 2px;
+  width: 255px;
+  text-align: center;
+  display: inline-block;
+  margin: 25px;
+  vertical-align: top;
 }
 
-.post-element > img {
-  width: 110px;
-  height: 150px;
-  left: 0;
+.post-image {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 140px;
+}
+
+.post-title {
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 600;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 3px 0;
+  width: 180px;
+  height: 1.3rem;
+  color: gray;
+  display: flex;
+  // text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+}
+
+.post-ceated-day {
+  float: right;
+  font-size: 0.8rem;
+}
+.post-by {
+  float: left;
+  font-size: 0.8rem;
+}
+.post-comments {
+  float: right;
+  display: block;
+  font-size: 0.8rem;
+  background-color: white;
+  width: 0.8rem;
+  height: 0.8rem;
+  border-radius: 4px;
+  color: black;
+}
+
+.articles-box {
+  text-align: right;
+  height: 35px;
 }
 
 .tag-list {
-  width: 300px;
+  position: fixed;
+  display: inline-block;
+  width: 320px;
   height: 100px;
-  border: solid;
-  margin: auto;
-}
-
-.tag-list-title {
-  font-size: 1.5rem;
-  margin: 5px 0; 
+  padding-top: 20px;
+  right: 0;
+  background-color: rgba(2, 2, 2, 0.418);
 }
 
 .tag-list-elements {
   display: inline-block;
-  margin: 0 10px;
-  font-size: 1rem;
-}
-
-.menu-button {
-  display: block;
-  margin: 5px;
-  padding: 4px;
-  border: solid;
-  font-size: 1.5rem;
+  margin: 3px 4px;
+  border-width: 1px;
+  font-size: 1.1rem;
+  color: rgb(0, 0, 0);
+  background-color: gray;
+  padding: 0px 4px;
 }
 
 .admin-box {
-  margin: 5px;
-  padding: 4px;
-  border: solid;
-  font-size: 1.5rem;
+  padding-top: 80px;
+  text-align: center;
+  height: 1000px;
+}
+
+.admin-select-box > a {
+  font-size: 1.3rem;
+  margin: 0 8px;
+  color: white;
+  text-decoration: none;
 }
 
 .tag-box {
-  display: flex;
+  height: 1.1rem;
 }
+
+.tag-box > div {
+  display: inline-block;
+  margin: 3px 4px;
+  border-width: 1px;
+  font-size: 0.9rem;
+  color: rgb(0, 0, 0);
+  background-color: gray;
+  padding: 0px 4px;
+}
+
+.sort-box {
+  width:200px;
+  border-color: rgb(49, 49, 49); 
+}
+
+.ascending-btn {
+  text-decoration: none;
+  border: none;
+  width: 70px;
+  height: 30px;
+  font-size: 13px;
+  margin: 5px 8px;
+  float: right;
+  color: white;
+  background-color: rgb(55, 98, 55);
+}
+
+.descending-btn {
+  text-decoration: none;
+  border: none;
+  width: 70px;
+  height: 30px;
+  font-size: 13px;
+  margin: 5px 8px;
+  float: right;
+  color: white;
+  background-color: rgb(55, 98, 55);
+}
+
+.post-detail-element {
+  width: 950px;
+  padding: 20px;
+  height: 100%;
+  margin: auto;
+  background-color: rgb(46, 46, 46);
+}
+
+.post-detail-title {
+  height: 60px;
+  font-size: 2rem;
+  text-align: center;
+  font-weight: 800;
+}
+
+.post-detail-by {
+  
+}
+.post-detail-day {
+  float: right;
+  margin: 0 5px;
+}
+.post-detail-time {
+  float: right;
+  margin: 0 5px;
+}
+.post-detail-comments {
+  width: 900px;
+  border: solid;
+  border-color: gray;
+  margin-bottom: 20px;
+  margin: auto;
+}
+
+.comments-title {
+  padding: 5px;
+  font-size: 1.2rem;
+}
+
+.post-detail-comment {
+margin: 15px 10px;
+}
+
+footer {
+  top: 106%;
+  color: rgb(85, 85, 85);
+  border-top: solid;
+  border-color: rgb(49, 49, 49);
+  border-width: 2px;
+  padding: 20px;
+  padding-left: 30px;
+  width: 97%;
+}
+
+.vanilla-coding-logo > img {
+  margin-top: 10px;
+  width: 220px;
+}
+
+.error-page {
+  width: 1000px;
+  display: inline-block;
+  margin: auto;
+}
+
+.ui-select-box {
+  // height: 100%;
+}
+
